--- a/README.org
+++ b/README.org
@@ -17,11 +17,11 @@ The basic format pipeline is =org → tex → docx → pdf=.
 
 The =_scripts= directory contains two scripts: a Doom CLI script (=export-to-latex.el=) and a shell script (=org2output.sh=) that calls the former, along with other utilities to handle the full conversion pipeline.
 
-| Conversion  | Utility          |
-|-------------+------------------|
-| =org → tex=  | Emacs org export |
-| =tex → docx= | Pandoc           |
-| =docx → pdf= | LibreOffice      |
+| Conversion  | Utility                         |
+|-------------+---------------------------------|
+| =org → tex=  | Emacs =org-latex-export-to-latex= |
+| =tex → docx= | Pandoc                          |
+| =docx → pdf= | LibreOffice                     |
 
 The =_styles= directory contains Citation Style Language (CSL) files for reference formatting, as well as =docx= files used by Pandoc as style references. The "draft" reference file includes a header with my name and a DRAFT watermark.
 
