--- a/README.org
+++ b/README.org
@@ -25,7 +25,7 @@ The =_scripts= directory contains two scripts: a Doom CLI script (=export-to-lat
 
 The =_styles= directory contains Citation Style Language (CSL) files for reference formatting, as well as =docx= files used by Pandoc as style references. The "draft" reference file includes a header with my name and a DRAFT watermark.
 
-The Makefile provides job options for exporting the org file:
+The Makefile provides job options for exporting the =org= file and organizing drafts or other elements in the project directory:
 
 | Job               | Description                                                      |
 |-------------------+------------------------------------------------------------------|
